--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,64 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="center"
-    android:gravity="center"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <!--    <TextView-->
-    <!--        android:id="@+id/textView"-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:layout_weight="1"-->
-    <!--        android:text="Hello World!"-->
-    <!--        app:layout_constraintBottom_toTopOf="@+id/textView2"-->
-    <!--        app:layout_constraintEnd_toEndOf="parent"-->
-    <!--        app:layout_constraintStart_toStartOf="parent"-->
-    <!--        app:layout_constraintTop_toTopOf="parent" />-->
-
-    <!--    <TextView-->
-    <!--        android:id="@+id/textView2"-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:text="jnvvvvvvvvvvvvvvvvvvvvvvvvvvsjvbjwvbwjihvv ihwbv owhbojbvn jwnv jwwwwwwwwwwww"-->
-    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
-    <!--        app:layout_constraintEnd_toEndOf="parent"-->
-    <!--        app:layout_constraintStart_toStartOf="parent"-->
-    <!--        app:layout_constraintTop_toBottomOf="@+id/textView" />-->
 
     <TextView
-        android:id="@+id/text"
-        android:textSize="30sp"
-        android:layout_width="wrap_content"
-        android:layout_height="200dp"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:text="Android is the best"
-
-        />
-
-
-
-    <View
-        android:layout_width="wrap_content"
-        android:layout_weight="4"
+        android:id="@+id/normal"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:foreground="@drawable/ic_launcher_background"
-        android:text="ABCDE" />
+        android:layout_marginTop="10dp"
+        android:background="#00f"
+        android:padding="20dp"
+        android:text="Width 200dp"
+        android:textColor="#FFF"
+        android:textSize="26sp"
+        android:textStyle="normal" />
 
-    <Button
-        android:id="@+id/button"
+    <TextView
+        android:id="@+id/bold"
+        android:layout_width="400dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:background="#FFC800"
+        android:padding="20dp"
+        android:text="Width Wrap content"
+        android:textColor="#FACFB4B4"
+        android:textSize="26sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/italic"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_weight="1"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:background="#00f"
         android:gravity="center"
-        android:text="Approve"
+        android:padding="20dp"
+        android:text="Width match parent"
+        android:textColor="#FFF"
+        android:textSize="26sp"
+        android:textStyle="italic" />
 
-        />
 </LinearLayout>
 
 
