--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -166,10 +166,8 @@
         android:text="view hide2"
         app:layout_constraintHorizontal_bias="0.567"
         app:layout_constraintLeft_toRightOf="@id/view_hide1"
-
-
         app:layout_constraintRight_toRightOf="parent"
-        tools:layout_editor_absoluteY="32dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <!--app:layout_constraint{X}_to{Y}={Z}
