--- a/app/src/main/res/layout/second_layout.xml
+++ b/app/src/main/res/layout/second_layout.xml
@@ -114,13 +114,13 @@
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="393dp"
+        android:layout_height="273dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="33dp"
-        android:layout_marginEnd="44dp"
-        android:layout_marginBottom="18dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginEnd="41dp"
+        android:layout_marginBottom="6dp"
         android:orientation="vertical">
 
         <EditText
@@ -134,8 +134,7 @@
             android:id="@+id/tv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="tv"
-            />
+            android:text="tv" />
 
         <Button
             android:id="@+id/button"
